--- a/index.html
+++ b/index.html
@@ -1,31 +1,239 @@
 <!DOCTYPE html>
 <html lang="ru">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Научиться учиться</title>
-</head>
-<body>
-  <div class="page">
-    <header class="header">
-
-    </header>
-    <main class="content">
-      <section class="description">
-      </section>
-
-      <section class="digits">
-      </section>
-
-      <section class="feynman">
-      </section>
-
-      <section class="kaufman">
-      </section>
-    </main>
-    <footer class="footer">
-
-    </footer>
-  </div>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Научиться учиться</title>
+    <link rel="stylesheet" href="./styles/normalize.css" />
+    <link rel="stylesheet" href="./styles/style.css" />
+  </head>
+  <body>
+    <div class="page">
+      <header class="header">
+        <img
+          class="logo logo_place_header"
+          src="images/logo_place_header.svg"
+          alt="логотип Яндекс.Практикум"
+        />
+        <h1 class="header__title">Научиться учиться</h1>
+        <div class="header__subtitle">
+          Какие современные и эффективные подходы к обучению вы можете
+          использовать в своей жизни?
+          <a class="header__link" href="#">Узнать &rarr;</a>
+        </div>
+        <img
+          class="header__main-illustration"
+          src="images/header-image.png"
+          alt="основная иллюстрация"
+        />
+        <div class="header__square-pic"></div>
+      </header>
+      <main class="content">
+        <section class="description">
+          <div class="description__two-columns">
+            <h2 class="description__two-columns__brief">Главные проблемы в обучении</h2>
+            <div class="description__two-columns__main-text">
+              <p class="description__two-columns__paragraph">
+                Ни в школе, ни в институте нас не учат тому, как правильно
+                изучать материал. Мы готовимся к экзаменам и учим билеты. Мы
+                тренируемся решать однообразные задачи, чтобы лучше сдать тест,
+                но часто в итоге это не дает нам реального знания. Зубрежка
+                быстро выветривается и не приносит пользы.
+              </p>
+              <p class="description__two-columns__paragraph">
+                <span class="description__two-columns__span-accent">Вывод:</span> учиться
+                тоже нужно уметь, но почему-то этому мало где учат. Что с этим
+                делать?
+              </p>
+              <p class="description__two-columns__paragraph">
+                Конкретные техники и упражнения помогают изменить подход к
+                обучению, сделать его эффективным и захватывающим. Эти же
+                техники применяются на примере обучения в Практикуме.
+              </p>
+            </div>
+          </div>
+        </section>
+        <section class="digits">
+          <h2 class="digits__section-title_theme_light">Цифры и факты</h2>
+          <div class="digits__section-subtitle_theme_light">Про учёбу и мозг</div>
+          <ul class="table_theme_light">
+            <li class="table__cell_theme_light">
+              <h3 class="table__heading_theme_light">86 миллиардов</h3>
+              <p class="table__text_theme_light">
+                Число нейронов в мозге человека
+              </p>
+            </li>
+            <li class="table__cell_theme_light">
+              <h3 class="table__heading_theme_light">2.1 миллиарда</h3>
+              <p class="table__text_theme_light">
+                Число нуждающихся в повышении квалификации
+              </p>
+              <p class="table__text_theme_light">Всемирный Банк, 2017</p>
+            </li>
+            <li class="table__cell_theme_light">
+              <h3 class="table__heading_theme_light">1000 терабайт</h3>
+              <p class="table__text_theme_light">Объём памяти человека</p>
+            </li>
+            <li class="table__cell_theme_light">
+              <h3 class="table__heading_theme_light">500 триллионов</h3>
+              <p class="table__text_theme_light">
+                Число ответственных за обучение нервных синапсов у взрослого
+                человека
+              </p>
+            </li>
+            <li class="table__cell_theme_light">
+              <h3 class="table__heading_theme_light">420 миллионов</h3>
+              <p class="table__text_theme_light">
+                Число взрослых людей моложе 25 лет, не имеющих образования для
+                трудоустройства
+              </p>
+              <p class="table__text_theme_light">Всемирный Банк, 2017</p>
+            </li>
+            <li class="table__cell_theme_light">
+              <h3 class="table__heading_theme_light">17–20 лет</h3>
+              <p class="table__text_theme_light">Пик обучаемости</p>
+            </li>
+            <li class="table__cell_theme_light">
+              <h3 class="table__heading_theme_light">1885 год</h3>
+              <p class="table__text_theme_light">Открытие кривой забывания</p>
+            </li>
+            <li class="table__cell_theme_light">
+              <h3 class="table__heading_theme_light">1889 год</h3>
+              <p class="table__text_theme_light">Открытие условного рефлекса</p>
+            </li>
+          </ul>
+        </section>
+        <section class="feynman">
+          <h2 class="feynman__title">Метод Фейнмана</h2>
+          <div class="feynman__subtitle">Выучить и не забыть.</div>
+          <a class="feynman__link" href="#">Подробнее &rarr;</a>
+        </section>
+        <section class="kaufman">
+          <h2 class="kaufman__section-title_theme_dark">Принципы обучения</h2>
+          <div class="kaufman__section-subtitle_theme_dark">от Джоша Кауфмана</div>
+          <ol class="table_theme_dark">
+            <li class="table__cell_theme_dark">
+              <h3 class="table__heading_theme_dark"></h3>
+              <p class="table__text_theme_dark">
+                Выберите привлекательный проект.
+              </p>
+            </li>
+            <li class="table__cell_theme_dark">
+              <h3 class="table__heading_theme_dark"></h3>
+              <p class="table__text_theme_dark">
+                Сосредоточьтесь на каком-то одном навыке.
+              </p>
+            </li>
+            <li class="table__cell_theme_dark">
+              <h3 class="table__heading_theme_dark"></h3>
+              <p class="table__text_theme_dark">
+                Определите целевой уровень мастерства.
+              </p>
+            </li>
+            <li class="table__cell_theme_dark">
+              <h3 class="table__heading_theme_dark"></h3>
+              <p class="table__text_theme_dark">Разбейте навык на элементы.</p>
+            </li>
+            <li class="table__cell_theme_dark">
+              <h3 class="table__heading_theme_dark"></h3>
+              <p class="table__text_theme_dark">
+                Приготовьте всё необходимое для занятий.
+              </p>
+            </li>
+            <li class="table__cell_theme_dark">
+              <h3 class="table__heading_theme_dark"></h3>
+              <p class="table__text_theme_dark">
+                Устраните препятствия для занятий.
+              </p>
+            </li>
+            <li class="table__cell_theme_dark">
+              <h3 class="table__heading_theme_dark"></h3>
+              <p class="table__text_theme_dark">
+                Выделите специальное время для занятий.
+              </p>
+            </li>
+            <li class="table__cell_theme_dark">
+              <h3 class="table__heading_theme_dark"></h3>
+              <p class="table__text_theme_dark">
+                Создайте быстрые петли обратной связи.
+              </p>
+            </li>
+            <li class="table__cell_theme_dark">
+              <h3 class="table__heading_theme_dark"></h3>
+              <p class="table__text_theme_dark">
+                Занимайтесь по расписанию, короткими интенсивными интервалами.
+              </p>
+            </li>
+            <li class="table__cell_theme_dark">
+              <h3 class="table__heading_theme_dark"></h3>
+              <p class="table__text_theme_dark">
+                Уделяйте внимание количеству и скорости.
+              </p>
+            </li>
+          </ol>
+          <img
+            class="kaufman__triangle"
+            src="images/kaufman-triangle.svg"
+            alt="изображение треугольника"
+          />
+        </section>
+      </main>
+      <footer class="footer">
+        <div class="footer__columns">
+          <div class="footer__column_content_copyright">
+            <img
+              class="logo logo_place_footer"
+              src="images/logo_place_footer.svg"
+              alt="логотип Яндекс.Практикум"
+            />
+            <p class="footer__author">&copy;2019.Роман Кищенко</p>
+          </div>
+          <div class="footer__column_content_info">
+            <h2 class="footer__column-heading">О Практикуме</h2>
+            <nav>
+              <ul class="footer__column-links">
+                <li><a class="footer__column-link" href="#">Главная</a></li>
+                <li><a class="footer__column-link" href="#">Концепция</a></li>
+                <li><a class="footer__column-link" href="#">Наставники</a></li>
+              </ul>
+            </nav>
+          </div>
+          <div class="footer__column_content_social">
+            <h2 class="footer__column-heading">Соцсети</h2>
+            <nav>
+              <ul class="footer__column-links">
+                <li>
+                  <a class="footer__column-link" href="#">
+                    <img
+                      class="footer__social-icon"
+                      src="images/facebook_color_white.svg"
+                      alt="логотип Facebook"
+                    />Facebook</a
+                  >
+                </li>
+                <li>
+                  <a class="footer__column-link" href="#">
+                    <img
+                      class="footer__social-icon"
+                      src="images/vk_color_white.svg"
+                      alt="логотип ВКонтакте"
+                    />ВКонтакте</a
+                  >
+                </li>
+                <li>
+                  <a class="footer__column-link" href="#">
+                    <img
+                      class="footer__social-icon"
+                      src="images/instagram_color_white.svg"
+                      alt="логотип Instagram"
+                    />Instagram</a
+                  >
+                </li>
+              </ul>
+            </nav>
+          </div>
+        </div>
+      </footer>
+    </div>
+  </body>
 </html>
