--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
           alt="логотип Яндекс.Практикум"
         />
         <h1 class="header__title">Научиться учиться</h1>
-        <div class="header__subtitle">
+        <p class="header__subtitle">
           Какие современные и эффективные подходы к обучению вы можете
           использовать в своей жизни?
           <a class="header__link" href="#">Узнать &rarr;</a>
-        </div>
+        </p>
         <img
           class="header__main-illustration"
           src="images/header-image.png"
@@ -30,157 +30,153 @@
       </header>
       <main class="content">
         <section class="description">
-          <div class="description__two-columns">
-            <h2 class="description__two-columns__brief">Главные проблемы в обучении</h2>
-            <div class="description__two-columns__main-text">
-              <p class="description__two-columns__paragraph">
+          <article class="two-columns">
+            <h2 class="two-columns__brief">Главные проблемы в обучении</h2>
+            <div class="two-columns__main-text">
+              <p class="two-columns__paragraph">
                 Ни в школе, ни в институте нас не учат тому, как правильно
                 изучать материал. Мы готовимся к экзаменам и учим билеты. Мы
                 тренируемся решать однообразные задачи, чтобы лучше сдать тест,
                 но часто в итоге это не дает нам реального знания. Зубрежка
                 быстро выветривается и не приносит пользы.
               </p>
-              <p class="description__two-columns__paragraph">
-                <span class="description__two-columns__span-accent">Вывод:</span> учиться
+              <p class="two-columns__paragraph">
+                <span class="two-columns__span-accent">Вывод:</span> учиться
                 тоже нужно уметь, но почему-то этому мало где учат. Что с этим
                 делать?
               </p>
-              <p class="description__two-columns__paragraph">
+              <p class="two-columns__paragraph">
                 Конкретные техники и упражнения помогают изменить подход к
                 обучению, сделать его эффективным и захватывающим. Эти же
                 техники применяются на примере обучения в Практикуме.
               </p>
             </div>
-          </div>
+          </article>
         </section>
         <section class="digits">
-          <h2 class="digits__section-title_theme_light">Цифры и факты</h2>
-          <div class="digits__section-subtitle_theme_light">Про учёбу и мозг</div>
-          <ul class="table_theme_light">
-            <li class="table__cell_theme_light">
-              <h3 class="table__heading_theme_light">86 миллиардов</h3>
-              <p class="table__text_theme_light">
+          <h2 class="section-title section-title_theme_light">Цифры и факты</h2>
+          <h3 class="section-subtitle section-subtitle_theme_light">Про учёбу и мозг</h3>
+          <ul class="table table_theme_light">
+            <li class="table table__cell_theme_light">
+              <h3 class="table table__heading_theme_light">86 миллиардов</h3>
+              <p class="table table__text_theme_light">
                 Число нейронов в мозге человека
               </p>
             </li>
-            <li class="table__cell_theme_light">
-              <h3 class="table__heading_theme_light">2.1 миллиарда</h3>
-              <p class="table__text_theme_light">
+            <li class="table table__cell_theme_light">
+              <h3 class="table table__heading_theme_light">2.1 миллиарда</h3>
+              <p class="table table__text_theme_light">
                 Число нуждающихся в повышении квалификации
               </p>
-              <p class="table__text_theme_light">Всемирный Банк, 2017</p>
+              <p class="table table__text_theme_light">Всемирный Банк, 2017</p>
             </li>
-            <li class="table__cell_theme_light">
-              <h3 class="table__heading_theme_light">1000 терабайт</h3>
-              <p class="table__text_theme_light">Объём памяти человека</p>
+            <li class="table table__cell_theme_light">
+              <h3 class="table table__heading_theme_light">1000 терабайт</h3>
+              <p class="table table__text_theme_light">Объём памяти человека</p>
             </li>
-            <li class="table__cell_theme_light">
-              <h3 class="table__heading_theme_light">500 триллионов</h3>
-              <p class="table__text_theme_light">
+            <li class="table table__cell_theme_light">
+              <h3 class="table table__heading_theme_light">500 триллионов</h3>
+              <p class="table table__text_theme_light">
                 Число ответственных за обучение нервных синапсов у взрослого
                 человека
               </p>
             </li>
-            <li class="table__cell_theme_light">
-              <h3 class="table__heading_theme_light">420 миллионов</h3>
-              <p class="table__text_theme_light">
+            <li class="table table__cell_theme_light">
+              <h3 class="table table__heading_theme_light">420 миллионов</h3>
+              <p class="table table__text_theme_light">
                 Число взрослых людей моложе 25 лет, не имеющих образования для
                 трудоустройства
               </p>
-              <p class="table__text_theme_light">Всемирный Банк, 2017</p>
+              <p class="table table__text_theme_light">Всемирный Банк, 2017</p>
             </li>
-            <li class="table__cell_theme_light">
-              <h3 class="table__heading_theme_light">17–20 лет</h3>
-              <p class="table__text_theme_light">Пик обучаемости</p>
+            <li class="table table__cell_theme_light">
+              <h3 class="table table__heading_theme_light">17–20 лет</h3>
+              <p class="table table__text_theme_light">Пик обучаемости</p>
             </li>
-            <li class="table__cell_theme_light">
-              <h3 class="table__heading_theme_light">1885 год</h3>
-              <p class="table__text_theme_light">Открытие кривой забывания</p>
+            <li class="table table__cell_theme_light">
+              <h3 class="table table__heading_theme_light">1885 год</h3>
+              <p class="table table__text_theme_light">Открытие кривой забывания</p>
             </li>
-            <li class="table__cell_theme_light">
-              <h3 class="table__heading_theme_light">1889 год</h3>
-              <p class="table__text_theme_light">Открытие условного рефлекса</p>
+            <li class="table table__cell_theme_light">
+              <h3 class="table table__heading_theme_light">1889 год</h3>
+              <p class="table table__text_theme_light">Открытие условного рефлекса</p>
             </li>
           </ul>
         </section>
         <section class="feynman">
           <h2 class="feynman__title">Метод Фейнмана</h2>
-          <div class="feynman__subtitle">Выучить и не забыть.</div>
+          <p class="feynman__subtitle">Выучить и не забыть.</p>
           <a class="feynman__link" href="#">Подробнее &rarr;</a>
         </section>
         <section class="kaufman">
-          <h2 class="kaufman__section-title_theme_dark">Принципы обучения</h2>
-          <div class="kaufman__section-subtitle_theme_dark">от Джоша Кауфмана</div>
-          <ol class="table_theme_dark">
-            <li class="table__cell_theme_dark">
-              <h3 class="table__heading_theme_dark"></h3>
-              <p class="table__text_theme_dark">
+          <h2 class="section-title section-title_theme_dark">Принципы обучения</h2>
+          <h3 class="section-subtitle section-subtitle_theme_dark">от Джоша Кауфмана</h3>
+          <ol class="table table_theme_dark">
+            <li class="table table__cell_theme_dark">
+              <h3 class="table table__heading_theme_dark"></h3>
+              <p class="table table__text_theme_dark">
                 Выберите привлекательный проект.
               </p>
             </li>
-            <li class="table__cell_theme_dark">
-              <h3 class="table__heading_theme_dark"></h3>
-              <p class="table__text_theme_dark">
+            <li class="table table__cell_theme_dark">
+              <h3 class="table table__heading_theme_dark"></h3>
+              <p class="table table__text_theme_dark">
                 Сосредоточьтесь на каком-то одном навыке.
               </p>
             </li>
-            <li class="table__cell_theme_dark">
-              <h3 class="table__heading_theme_dark"></h3>
-              <p class="table__text_theme_dark">
+            <li class="table table__cell_theme_dark">
+              <h3 class="table table__heading_theme_dark"></h3>
+              <p class="table table__text_theme_dark">
                 Определите целевой уровень мастерства.
               </p>
             </li>
-            <li class="table__cell_theme_dark">
-              <h3 class="table__heading_theme_dark"></h3>
-              <p class="table__text_theme_dark">Разбейте навык на элементы.</p>
+            <li class="table table__cell_theme_dark">
+              <h3 class="table table__heading_theme_dark"></h3>
+              <p class="table table__text_theme_dark">Разбейте навык на элементы.</p>
             </li>
-            <li class="table__cell_theme_dark">
-              <h3 class="table__heading_theme_dark"></h3>
-              <p class="table__text_theme_dark">
+            <li class="table table__cell_theme_dark">
+              <h3 class="table table__heading_theme_dark"></h3>
+              <p class="table table__text_theme_dark">
                 Приготовьте всё необходимое для занятий.
               </p>
             </li>
-            <li class="table__cell_theme_dark">
-              <h3 class="table__heading_theme_dark"></h3>
-              <p class="table__text_theme_dark">
+            <li class="table table__cell_theme_dark">
+              <h3 class="table table__heading_theme_dark"></h3>
+              <p class="table table__text_theme_dark">
                 Устраните препятствия для занятий.
               </p>
             </li>
-            <li class="table__cell_theme_dark">
-              <h3 class="table__heading_theme_dark"></h3>
-              <p class="table__text_theme_dark">
+            <li class="table table__cell_theme_dark">
+              <h3 class="table table__heading_theme_dark"></h3>
+              <p class="table table__text_theme_dark">
                 Выделите специальное время для занятий.
               </p>
             </li>
-            <li class="table__cell_theme_dark">
-              <h3 class="table__heading_theme_dark"></h3>
-              <p class="table__text_theme_dark">
+            <li class="table table__cell_theme_dark">
+              <h3 class="table table__heading_theme_dark"></h3>
+              <p class="table table__text_theme_dark">
                 Создайте быстрые петли обратной связи.
               </p>
             </li>
-            <li class="table__cell_theme_dark">
-              <h3 class="table__heading_theme_dark"></h3>
-              <p class="table__text_theme_dark">
+            <li class="table table__cell_theme_dark">
+              <h3 class="table table__heading_theme_dark"></h3>
+              <p class="table table__text_theme_dark">
                 Занимайтесь по расписанию, короткими интенсивными интервалами.
               </p>
             </li>
-            <li class="table__cell_theme_dark">
-              <h3 class="table__heading_theme_dark"></h3>
-              <p class="table__text_theme_dark">
+            <li class="table table__cell_theme_dark">
+              <h3 class="table table__heading_theme_dark"></h3>
+              <p class="table table__text_theme_dark">
                 Уделяйте внимание количеству и скорости.
               </p>
             </li>
           </ol>
-          <img
-            class="kaufman__triangle"
-            src="images/kaufman-triangle.svg"
-            alt="изображение треугольника"
-          />
+          <div class="kaufman__triangle"></div>
         </section>
       </main>
       <footer class="footer">
         <div class="footer__columns">
-          <div class="footer__column_content_copyright">
+          <div class="footer__column footer__column_content_copyright">
             <img
               class="logo logo_place_footer"
               src="images/logo_place_footer.svg"
@@ -188,7 +184,7 @@
             />
             <p class="footer__author">&copy;2019.Роман Кищенко</p>
           </div>
-          <div class="footer__column_content_info">
+          <div class="footer__column footer__column_content_info">
             <h2 class="footer__column-heading">О Практикуме</h2>
             <nav>
               <ul class="footer__column-links">
@@ -198,7 +194,7 @@
               </ul>
             </nav>
           </div>
-          <div class="footer__column_content_social">
+          <div class="footer__column footer__column_content_social">
             <h2 class="footer__column-heading">Соцсети</h2>
             <nav>
               <ul class="footer__column-links">
