--- a/index.html
+++ b/index.html
@@ -54,52 +54,52 @@
           </article>
         </section>
         <section class="digits">
-          <h2 class="section-title section-title_theme_light">Цифры и факты</h2>
-          <h3 class="section-subtitle section-subtitle_theme_light">Про учёбу и мозг</h3>
-          <ul class="table table_theme_light">
-            <li class="table table__cell_theme_light">
-              <h3 class="table table__heading_theme_light">86 миллиардов</h3>
-              <p class="table table__text_theme_light">
+          <h2 class="section-title">Цифры и факты</h2>
+          <h3 class="section-subtitle">Про учёбу и мозг</h3>
+          <ul class="table">
+            <li class="table__cell">
+              <h3 class="table__heading">86 миллиардов</h3>
+              <p class="table__text">
                 Число нейронов в мозге человека
               </p>
             </li>
-            <li class="table table__cell_theme_light">
-              <h3 class="table table__heading_theme_light">2.1 миллиарда</h3>
-              <p class="table table__text_theme_light">
+            <li class="table__cell">
+              <h3 class="table__heading">2.1 миллиарда</h3>
+              <p class="table__text">
                 Число нуждающихся в повышении квалификации
               </p>
-              <p class="table table__text_theme_light">Всемирный Банк, 2017</p>
+              <p class="table__text">Всемирный Банк, 2017</p>
             </li>
-            <li class="table table__cell_theme_light">
-              <h3 class="table table__heading_theme_light">1000 терабайт</h3>
-              <p class="table table__text_theme_light">Объём памяти человека</p>
+            <li class="table__cell">
+              <h3 class="table__heading">1000 терабайт</h3>
+              <p class="table__text">Объём памяти человека</p>
             </li>
-            <li class="table table__cell_theme_light">
-              <h3 class="table table__heading_theme_light">500 триллионов</h3>
-              <p class="table table__text_theme_light">
+            <li class="table__cell">
+              <h3 class="table__heading">500 триллионов</h3>
+              <p class="table__text">
                 Число ответственных за обучение нервных синапсов у взрослого
                 человека
               </p>
             </li>
-            <li class="table table__cell_theme_light">
-              <h3 class="table table__heading_theme_light">420 миллионов</h3>
-              <p class="table table__text_theme_light">
+            <li class="table__cell">
+              <h3 class="table__heading">420 миллионов</h3>
+              <p class="table__text">
                 Число взрослых людей моложе 25 лет, не имеющих образования для
                 трудоустройства
               </p>
-              <p class="table table__text_theme_light">Всемирный Банк, 2017</p>
+              <p class="table__text">Всемирный Банк, 2017</p>
             </li>
-            <li class="table table__cell_theme_light">
-              <h3 class="table table__heading_theme_light">17–20 лет</h3>
-              <p class="table table__text_theme_light">Пик обучаемости</p>
+            <li class="table__cell">
+              <h3 class="table__heading">17–20 лет</h3>
+              <p class="table__text">Пик обучаемости</p>
             </li>
-            <li class="table table__cell_theme_light">
-              <h3 class="table table__heading_theme_light">1885 год</h3>
-              <p class="table table__text_theme_light">Открытие кривой забывания</p>
+            <li class="table__cell">
+              <h3 class="table__heading">1885 год</h3>
+              <p class="table__text">Открытие кривой забывания</p>
             </li>
-            <li class="table table__cell_theme_light">
-              <h3 class="table table__heading_theme_light">1889 год</h3>
-              <p class="table table__text_theme_light">Открытие условного рефлекса</p>
+            <li class="table__cell">
+              <h3 class="table__heading">1889 год</h3>
+              <p class="table__text">Открытие условного рефлекса</p>
             </li>
           </ul>
         </section>
@@ -112,61 +112,61 @@
           <h2 class="section-title section-title_theme_dark">Принципы обучения</h2>
           <h3 class="section-subtitle section-subtitle_theme_dark">от Джоша Кауфмана</h3>
           <ol class="table table_theme_dark">
-            <li class="table table__cell_theme_dark">
-              <h3 class="table table__heading_theme_dark"></h3>
-              <p class="table table__text_theme_dark">
+            <li class="table__cell table__cell_theme_dark">
+              <h3 class="table__heading table__heading_theme_dark"></h3>
+              <p class="table__text table__text_theme_dark">
                 Выберите привлекательный проект.
               </p>
             </li>
-            <li class="table table__cell_theme_dark">
-              <h3 class="table table__heading_theme_dark"></h3>
-              <p class="table table__text_theme_dark">
+            <li class="table__cell table__cell_theme_dark">
+              <h3 class="table__heading table__heading_theme_dark"></h3>
+              <p class="table__text table__text_theme_dark">
                 Сосредоточьтесь на каком-то одном навыке.
               </p>
             </li>
-            <li class="table table__cell_theme_dark">
-              <h3 class="table table__heading_theme_dark"></h3>
-              <p class="table table__text_theme_dark">
+            <li class="table__cell table__cell_theme_dark">
+              <h3 class="table__heading table__heading_theme_dark"></h3>
+              <p class="table__text table__text_theme_dark">
                 Определите целевой уровень мастерства.
               </p>
             </li>
-            <li class="table table__cell_theme_dark">
-              <h3 class="table table__heading_theme_dark"></h3>
-              <p class="table table__text_theme_dark">Разбейте навык на элементы.</p>
+            <li class="table__cell table__cell_theme_dark">
+              <h3 class="table__heading table__heading_theme_dark"></h3>
+              <p class="table__text table__text_theme_dark">Разбейте навык на элементы.</p>
             </li>
-            <li class="table table__cell_theme_dark">
-              <h3 class="table table__heading_theme_dark"></h3>
-              <p class="table table__text_theme_dark">
+            <li class="table__cell table__cell_theme_dark">
+              <h3 class="table__heading table__heading_theme_dark"></h3>
+              <p class="table__text table__text_theme_dark">
                 Приготовьте всё необходимое для занятий.
               </p>
             </li>
-            <li class="table table__cell_theme_dark">
-              <h3 class="table table__heading_theme_dark"></h3>
-              <p class="table table__text_theme_dark">
+            <li class="table__cell table__cell_theme_dark">
+              <h3 class="table__heading table__heading_theme_dark"></h3>
+              <p class="table__text table__text_theme_dark">
                 Устраните препятствия для занятий.
               </p>
             </li>
-            <li class="table table__cell_theme_dark">
-              <h3 class="table table__heading_theme_dark"></h3>
-              <p class="table table__text_theme_dark">
+            <li class="table__cell table__cell_theme_dark">
+              <h3 class="table__heading table__heading_theme_dark"></h3>
+              <p class="table__text table__text_theme_dark">
                 Выделите специальное время для занятий.
               </p>
             </li>
-            <li class="table table__cell_theme_dark">
-              <h3 class="table table__heading_theme_dark"></h3>
-              <p class="table table__text_theme_dark">
+            <li class="table__cell table__cell_theme_dark">
+              <h3 class="table__heading table__heading_theme_dark"></h3>
+              <p class="table__text table__text_theme_dark">
                 Создайте быстрые петли обратной связи.
               </p>
             </li>
-            <li class="table table__cell_theme_dark">
-              <h3 class="table table__heading_theme_dark"></h3>
-              <p class="table table__text_theme_dark">
+            <li class="table__cell table__cell_theme_dark">
+              <h3 class="table__heading table__heading_theme_dark"></h3>
+              <p class="table__text table__text_theme_dark">
                 Занимайтесь по расписанию, короткими интенсивными интервалами.
               </p>
             </li>
-            <li class="table table__cell_theme_dark">
-              <h3 class="table table__heading_theme_dark"></h3>
-              <p class="table table__text_theme_dark">
+            <li class="table__cell table__cell_theme_dark">
+              <h3 class="table__heading table__heading_theme_dark"></h3>
+              <p class="table__text table__text_theme_dark">
                 Уделяйте внимание количеству и скорости.
               </p>
             </li>
