--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Научиться учиться</title>
-    <link rel="stylesheet" href="./vendor/normalize.css" />
-    <link rel="stylesheet" href="./index.css" />
+    <link rel="stylesheet" href="./pages/index.css" />
   </head>
   <body>
     <div class="page">
@@ -122,22 +121,28 @@
         <section class="video">
           <h2 class="section-title">Видео нa TED</h2>
           <h3 class="section-subtitle">Для тех, кто любит прокрастинировать</h3>
-          <div class="video__iframes">
-            <iframe
-              class="video__iframe"
-              src="https://www.youtube.com/embed/arj7oStGLkU"
-              title="YouTube видеоплейер"
-              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-              allowfullscreen
-            ></iframe>
-            <iframe
-              class="video__iframe"
-              src="https://www.youtube.com/embed/5MgBikgcWnY"
-              title="YouTube видеоплейер"
-              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-              allowfullscreen
-            ></iframe>
-          </div>
+          <ul class="video__iframes">
+            <li class="video__iframe">
+              <iframe
+                width="100%"
+                height="100%"
+                src="https://www.youtube.com/embed/arj7oStGLkU"
+                title="YouTube видеоплейер"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen
+              ></iframe>
+            </li>
+            <li class="video__iframe">
+              <iframe
+                width="100%"
+                height="100%"
+                src="https://www.youtube.com/embed/5MgBikgcWnY"
+                title="YouTube видеоплейер"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen
+              ></iframe>
+            </li>
+          </ul>
         </section>
         <section class="oakley">
           <article class="two-columns">
@@ -159,7 +164,7 @@
         <section class="feynman">
           <h2 class="feynman__title">Метод Фейнмана</h2>
           <p class="feynman__subtitle">Выучить и не забыть.</p>
-          <a class="feynman__link" href="#">Подробнее &rarr;</a>
+          <a class="feynman__link" href="#" target="_blank">Подробнее &rarr;</a>
         </section>
         <section class="digits">
           <h2 class="section-title">Цифры и факты</h2>
