--- a/index.html
+++ b/index.html
@@ -124,8 +124,8 @@
           <ul class="video__iframes">
             <li class="video__iframe">
               <iframe
-                width="100%"
-                height="100%"
+                width="515"
+                height="316"
                 src="https://www.youtube.com/embed/arj7oStGLkU"
                 title="YouTube видеоплейер"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
@@ -134,8 +134,8 @@
             </li>
             <li class="video__iframe">
               <iframe
-                width="100%"
-                height="100%"
+                width="515"
+                height="316"
                 src="https://www.youtube.com/embed/5MgBikgcWnY"
                 title="YouTube видеоплейер"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
