project work_2_correction_2

--- a/index.html
+++ b/index.html
@@ -122,20 +122,18 @@
           <h2 class="section-title">Видео нa TED</h2>
           <h3 class="section-subtitle">Для тех, кто любит прокрастинировать</h3>
           <ul class="video__iframes">
-            <li class="video__iframe">
+            <li>
               <iframe
-                width="515"
-                height="316"
+                class="video__iframe"
                 src="https://www.youtube.com/embed/arj7oStGLkU"
                 title="YouTube видеоплейер"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                 allowfullscreen
               ></iframe>
             </li>
-            <li class="video__iframe">
+            <li>
               <iframe
-                width="515"
-                height="316"
+                class="video__iframe"
                 src="https://www.youtube.com/embed/5MgBikgcWnY"
                 title="YouTube видеоплейер"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
